--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -7,7 +7,7 @@
   <meta name="author" content="Steve – CTRL All">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -18,7 +18,7 @@
   <div class="layout">
     {% include "navbar.liquid", page: page %}
     <main class="content">
-      {{ content | safe }}
+      {{ content }}
     </main>
   </div>
 
