Add mobile portrait overlay and responsive sidebar toggle

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+<div id="portrait-overlay">
+  <div class="overlay-text">🔄 This site is best experienced in landscape.</div>
+</div>
+
   {% include "topbar.liquid" %}
 
   <button id="sidebar-toggle" class="sidebar-toggle">☰ Menu</button>
@@ -20,8 +24,6 @@
     <main class="content">
       {{ content }}
     </main>
-  </div>
-
   </div>
 
   <!-- Floating GIF tooltip container -->
