Add centered portrait overlay with rotate image

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -13,8 +13,14 @@
 
 <body>
 <div id="portrait-overlay">
-  <div class="overlay-text">🔄 This site is best experienced in landscape.</div>
+  <div class="overlay-content" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+    <img src="/assets/images/Rotate%20screen.png" alt="Rotate device" width="80">
+    <div class="overlay-text" style="text-align: center;">This site is best experienced in landscape.</div>
+  </div>
 </div>
+
+
+
 
   {% include "topbar.liquid" %}
 
