--- a/_includes/navbar.liquid
+++ b/_includes/navbar.liquid
@@ -1,4 +1,3 @@
-<nav class="sidebar">
   <ul class="nav-level-1">
 
     <!-- Content Control Section -->
@@ -75,8 +74,10 @@
 
     <!-- Glossary Section -->
     <li>
-      <a href="/glossary/" class="{% if active == 'glossary' %}active{% endif %}">Glossary</a>
+      <button class="nav-toggle {% if active == 'glossary' %}active{% endif %}" onclick="location.href='/glossary/'">
+        Glossary
+      </button>
     </li>
 
   </ul>
-</nav>
+
