--- a/_includes/topbar.liquid
+++ b/_includes/topbar.liquid
@@ -1,6 +1,9 @@
 <header class="topbar">
-  <div class="logo">
-    <a href="/">CTRL All</a>
+  <div class="topbar-left">
+    <button class="menu-toggle" aria-label="Toggle menu">☰</button>
+    <div class="logo">
+      <a href="/">CTRL All</a>
+    </div>
   </div>
   <div class="topbar-right">
     <nav class="topnav">
