multiple site wide fixes

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -50,13 +50,13 @@
   </div>
 
   <header class="topbar">
-    <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar">☰</button>
+    <button id="navbar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar">☰</button>
     {% include "topbar.liquid" %}
   </header>
 
   <div class="layout-wrapper">
     <nav class="sidebar-wrapper">
-      <div id="navbar-content" class="navbar-collapse collapse">
+      <div id="navbar-content" class="navbar-collapse">
         {% include "navbar.liquid", page: page %}
       </div>
     </nav>
