--- a/_includes/navbar.liquid
+++ b/_includes/navbar.liquid
@@ -27,9 +27,10 @@
       <li><a href="/word/lists-fixing-number-lists/" class="{% if page.url == '/word/lists-fixing-number-lists/' %}active{% endif %}">Lists: Fixing number lists</a></li>
       <li><a href="/word/lists-soft-hard-returns/" class="{% if page.url == '/word/lists-soft-hard-returns/' %}active{% endif %}">Lists: Soft & hard returns</a></li>
       <li><a href="/word/tables/" class="{% if page.url == '/word/tables/' %}active{% endif %}">Tables</a></li>
+      <li><a href="/word/tables-formatting/" class="{% if page.url == '/word/tables-formatting/' %}active{% endif %}">Tables: Formatting</a></li>
       <li><a href="/word/tables-fixing-tables-extending-offscreen/" class="{% if page.url == '/word/tables-fixing-tables-extending-offscreen/' %}active{% endif %}">Tables: Fixing tables extending offscreen</a></li>
       <li><a href="/word/tables-fixing-tables-over-pages/" class="{% if page.url == '/word/tables-fixing-tables-over-pages/' %}active{% endif %}">Tables: Fixing tables over pages</a></li>
-
+      <li><a href="/word/images/" class="{% if page.url == '/word/images/' %}active{% endif %}">Images</a></li>
       <li><a href="/content-control/keyboard-shortcuts/#word-keyboard-shortcuts" class="{% if page.url == '/content-control/keyboard-shortcuts/#word-keyboard-shortcuts' %}active{% endif %}">Word Keyboard Shortcuts</a></li>
     </ul>
   </li>
