Google Adsense code added to layout.liquid

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -135,5 +135,8 @@
     }
   </script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6596712504858429"
+     crossorigin="anonymous"></script>
+
 </body>
 </html>
