layout.liquid meta for adsense

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -7,11 +7,10 @@
   <meta name="author" content="Steve – CTRL All">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="robots" content="index, follow">
+  <meta name="google-adsense-account" content="ca-pub-6596712504858429">
   <link rel="stylesheet" href="/css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6596712504858429"
-     crossorigin="anonymous"></script>
-  <style>
+  
     .copy-tooltip {
       position: absolute;
       top: -25px;
