--- a/_includes/navbar.liquid
+++ b/_includes/navbar.liquid
@@ -59,7 +59,7 @@
       <li><a href="/powerpoint/" class="{% if page.url == '/powerpoint/' %}active{% endif %}">Getting started with PowerPoint</a></li>
       <li><a href="/powerpoint/editing-slides/" class="{% if page.url == '/powerpoint/editing-slides/' %}active{% endif %}">Editing slides</a></li>
       <li><a href="/powerpoint/animations/" class="{% if page.url == '/powerpoint/animations/' %}active{% endif %}">Animations</a></li>
-      <li><a href="/powerpoint/fade-list-effect/" class="{% if page.url == '/powerpoint/fade-list-effect/' %}active{% endif %}">Fade list effect</a></li>
+      <li><a href="/powerpoint/fade-list-effect/" class="{% if page.url == '/powerpoint/fading-list-effect/' %}active{% endif %}">Fading list effect</a></li>
       <li><a href="/powerpoint/presenter-view/" class="{% if page.url == '/powerpoint/presenter-view/' %}active{% endif %}">Presenter view</a></li>
       <li><a href="/content-control/keyboard-shortcuts/#powerpoint-keyboard-shortcuts" class="{% if page.url == '/content-control/keyboard-shortcuts/#powerpoint-keyboard-shortcuts' %}active{% endif %}">PowerPoint Keyboard Shortcuts</a></li>
     </ul>
