Getting started with Word begun

--- a/_includes/navbar.liquid
+++ b/_includes/navbar.liquid
@@ -18,7 +18,7 @@
       Word <span class="arrow"></span>
     </button>
     <ul id="nav-word" class="nav-level-2 {% if active == 'word' %}show{% endif %}">
-      <li><a href="/word/" class="{% if page.url == '/word/' %}active{% endif %}">Getting started with Word</a></li>
+      <li><a href="/word/getting-started-word/" class="{% if page.url == '/word/getting-started-word/' %}active{% endif %}">Getting started with Word</a></li>
       <li><a href="/word/documents-vs-templates/" class="{% if page.url == '/word/documents-vs-templates/' %}active{% endif %}">Documents vs Templates</a></li>
       <li><a href="/word/pages-and-views/" class="{% if page.url == '/word/pages-and-views/' %}active{% endif %}">Pages and views</a></li>
       <li><a href="/word/saving-and-save-as/" class="{% if page.url == '/word/saving-and-save-as/' %}active{% endif %}">Saving and Save As</a></li>
@@ -83,5 +83,5 @@
       Glossary
     </button>
   </li>
-
+<div style="margin-bottom: 50px;"></div>
 </ul>
