interactive indent demos and more image edits

--- a/_includes/navbar.liquid
+++ b/_includes/navbar.liquid
@@ -83,5 +83,10 @@
       Glossary
     </button>
   </li>
+  <li>
+    <button class="nav-toggle {% if active == 'test' %}active{% endif %}" onclick="location.href='/word/test/'">
+      test
+    </button>
+  </li>
 <div style="margin-bottom: 50px;"></div>
 </ul>
